tests/unit/response_parsing/data/ec2-create-network-acl.json
{
    "NetworkAcl": {
        "Associations": [], 
        "NetworkAclId": "acl-5fb85d36", 
        "VpcId": "vpc-11ad4878", 
        "Tags": [], 
        "Entries": [
            {
                "CidrBlock": "0.0.0.0/0", 
                "RuleNumber": 32767, 
                "Protocol": "all", 
                "Egress": true, 
                "RuleAction": "deny"
            }, 
            {
                "CidrBlock": "0.0.0.0/0", 
                "RuleNumber": 32767, 
                "Protocol": "all", 
                "Egress": false, 
                "RuleAction": "deny"
            }
        ], 
        "IsDefault": false
    }, 
    "ResponseMetadata": {
        "RequestId": "59dbff89-35bd-4eac-99ed-be587EXAMPLE"
    }
}
